alts + recomendados index img

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Los 5 HTML son: index, bags, accesorios, carrito, preguntas frecuentes -->
     <header>
         <div class="item1-logoserene">
-            <a href="index.html"><img src="./assets/Serene_index.png" alt=""></a>
+            <a href="index.html"><img src="./assets/Serene_index.png" alt="Logo de Serene. Representando con un diseño apropiado la personalidad de nuestra marca."></a>
         </div>
         <div class="item2-nav">
             <nav>
@@ -37,15 +37,15 @@
         </div>
         <div class="item3-login">
             <div class="login">
-                <a href="">login | sign up</a>
-                <a1 href=""><img src="./assets/login.png" alt=""></a>
+                <a href="">sign up</a>
+                <a href="">| login<img src="./assets/login.png" alt="item sign up | login"></a>
             </div>
         </div>
         <div class="item4-search">
             <div class="carrito-search">
-                <a href=""><img src="./assets/lupa.png" alt=""></a>
-                <a href=""><img src="./assets/heart.png" alt=""></a>
-                <a href="./pages/carrito.html"><img src="./assets/carrito-de-compras.png" alt=""></a>
+                <a href=""><img src="./assets/lupa.png" alt="item buscador"></a>
+                <a href=""><img src="./assets/heart.png" alt="item elementos gustados"></a>
+                <a href="./pages/carrito.html"><img src="./assets/carrito-de-compras.png" alt="item carrito de compras"></a>
             </div>
         </div>
     </header>
@@ -53,7 +53,7 @@
     <main>
         <!-- SECCION 1 - banner publicitario, carrussel de 3 bloques -->
         <section class="grid-banner"> 
-            <img src="./assets/banner 2.png" alt="">
+            <img src="./assets/banner 2.png" alt="banner tipo carrusel promocional">
             <p>Últimos lanzamientos 15% OFF</p>
             <a href="./pages/últimoslanzamientos.html" target="_blank">Comprar</a>
         </section>
@@ -61,51 +61,51 @@
         <!-- SECCION 2 - Bloque Carteras -->
         <section class="flex-productos">
             <div class="cartelPic">
-                <img src="./assets/Cartel carteras recorte.png" alt="">
+                <img src="./assets/Cartel carteras recorte.png" alt="cartel representativo de la seccion carteras en la pagina principal; contiene foto de una dama teniendo una cartera estilo maletin con sus manos">
                 <h2>CARTERAS</h2>
             </div>
             <div class="productPic">
                 <div class="item1-prod">
                     <div>
-                        <img src="./assets/carteras1.jpg" alt="">
+                        <img src="./assets/carteras1.jpg" alt="Producto-carteras olivia, minibags cotidianas para acompañar tu outfit, por solamente $28.000 promocional">
                     </div>
                     <div>
                         <h4>OLIVIA</h4>
-                        <p>-$32.000-</p>
+                        <p>-$32.500-</p>
                         <p2>$28.000</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
                 <div class="item2-prod">
                     <div>
-                        <img src="./assets/carteras2.jpg" alt="">
+                        <img src="./assets/carteras2.jpg" alt="Producto-cartera Magenta, minibag en colores blanco y negro, con cadena frontal intercaladas entre dorado y el color respectivo de la cartera. Precio promocional $27.000">
                     </div>
                     <div>
                         <h4>MAGENTA</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <p>-$31.000-</p>
+                        <p2>$27.000</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
                 <div class="item3-prod">
                     <div>
-                        <img src="./assets/carteras3.jpg" alt="">
+                        <img src="./assets/carteras3.jpg" alt="Producto-cartera Gabriela, colores exclusivos en negro y fucsia, ideal para acompañar tu outfit de noche. Precio promocional $24.000">
                     </div>
                     <div>
                         <h4>GABRIELA</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <p>-$27.800-</p>
+                        <p2>$24.000</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
                 <div class="item4-prod">
                     <div>
-                        <img src="./assets/carteras4.jpg" alt="">
+                        <img src="./assets/carteras4.jpg" alt="Producto-bolso Elena, ideal para llevar de todo, sea de uso facultativo, viaje, o si sos mama! Con dimensiones excepcionales y piel de cocodrilo, en tonos negro, blanco y beige. Precio promocional $35.000">
                     </div>
                     <div>
                         <h4>ELENA</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <p>-$39.900-</p>
+                        <p2>$35.000</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
@@ -116,20 +116,20 @@
         <section class="bloque-central-grids">
             <div class="bloque-envios">
                 <div class="envios">
-                    <img src="./assets/manos.png" alt="">
+                    <img src="./assets/manos.png" alt="Retira tu compra gratis en nuestras tiendas">
                     <p>Retira gratis en tienda</p>
                 </div>
                 <div class="envios">
-                    <img src="./assets/camion.png" alt="">
+                    <img src="./assets/camion.png" alt="Envio gratuito a distintos puntos del país a partir de $87.000">
                     <p>Envío gratis +$87.000</p>
                 </div>
                 <div class="envios">
-                    <img src="./assets/reloj.png" alt="">
+                    <img src="./assets/reloj.png" alt="Compra antes de las 11AM y lo tenes en tu casa en menos de 24hs">
                     <p>Compra antes de las 11 AM y <br> lo tienes en 24hs</p>
                 </div>
             </div>
             <div class="bloque-nuevos-ingresos">
-                <img src="./assets/Nuevos ingresos.png" alt="">
+                <img src="./assets/Nuevos ingresos.png" alt="enlace directo a nuestros ingresos más recientes">
                 <h2>NUEVOS INGRESOS</h2>
             </div>
             <div class="bloque-newsletter">
@@ -152,51 +152,51 @@
             <div class="productPic">
                 <div class="item1-prod">
                     <div>
-                        <img src="./assets/billeteras1.jpg" alt="">
+                        <img src="./assets/billeteras1.jpg" alt="Billetera Classic en color negro y distintos tonos de marron, tamaño grande, simil cuero con apertura en cierre. Precio promocional $22.000">
                     </div>
                     <div>
-                        <h4>BTC</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <h4>CLASSIC</h4>
+                        <p>-$26.800-</p>
+                        <p2>$22.000</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
                 <div class="item2-prod">
                     <div>
-                        <img src="./assets/billeteras2.jpg" alt="">
+                        <img src="./assets/billeteras2.jpg" alt="Billetera Juliet, tamaño medio con apertura frontal y candadito de cierre dorado. Precio promocional $17.300">
                     </div>
                     <div>
-                        <h4>ETH</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <h4>JULIET</h4>
+                        <p>-$22.000-</p>
+                        <p2>$17.300</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
                 <div class="item3-prod">
                     <div>
-                        <img src="./assets/billeteras3.jpg" alt="">
+                        <img src="./assets/billeteras3.jpg" alt="Billetera Zoe, tamaño mediano en color negro y piel de cocodrilo. Precio promocional $18.000">
                     </div>
                     <div>
-                        <h4>BTC</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <h4>ZOE</h4>
+                        <p>-$21.000-</p>
+                        <p2>$18.000</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
                 <div class="item4-prod">
                     <div>
-                        <img src="./assets/billeteras4.jpg" alt="">
+                        <img src="./assets/billeteras4.jpg" alt="Billetera Matilda, apertura con cierre lateral y broche frontal, color rosa viejo y tamaño mediano. Precio promocional $21.500">
                     </div>
                     <div>
-                        <h4>ETH</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <h4>MATILDA</h4>
+                        <p>-$25.000-</p>
+                        <p2>$21.500</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
             </div>
             <div class="cartelPic">
-                <img src="./assets/Cartel billeteras (2).png" alt="">
+                <img src="./assets/Cartel billeteras (2).png" alt="cartel representativo de la seccion billeteras en la pagina principal; contiene foto de una dama teniendo una billetera marron con sus manos">
                 <h2>BILLETERAS</h2>
             </div>
         </section>
@@ -204,51 +204,51 @@
         <!-- SECCION 5 - BLOQUE ACCESORIOS -->
         <section class="flex-productos">
             <div class="cartelPic">
-                <img src="./assets/Cartel accesorios.png" alt="">
+                <img src="./assets/Cartel accesorios.png" alt="Se observa una mujer caminando de manera empoderada y luciendo multiples accesorios como cintos, gafas, aretes, relojes y más. Esta imagen representa la cartelera de accesorios en la pagina principal del sitio">
                 <h2>ACCESORIOS</h2>
             </div>
             <div class="productPic">
                 <div class="item1-prod">
                     <div>
-                        <img src="./assets/accesorios1.jpg" alt="">
+                        <img src="./assets/accesorios1.jpg" alt="cadenita soft, acero quirurgico bañado en oro de 18 kilates con una perla blanca como dije">
                     </div>
                     <div>
-                        <h4>NECKLACE</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <h4>cadenita Soft</h4>
+                        <p>-$35.500-</p>
+                        <p2>$32.000</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
                 <div class="item2-prod">
                     <div>
-                        <img src="./assets/accesorios2.jpg" alt="">
+                        <img src="./assets/accesorios2.jpg" alt="aros gold, de acero quirurgico bañado en oro de 18 kilates con diseño trenzado">
                     </div>
                     <div>
-                        <h4>RING</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <h4>aros Gold</h4>
+                        <p>-$18.000-</p>
+                        <p2>$14.000</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
                 <div class="item3-prod">
                     <div>
-                        <img src="./assets/accesorios3.jpg" alt="">
+                        <img src="./assets/accesorios3.jpg" alt="cadenita Diana, con muchas perlas pequeñas y una grande central, todas en color marmol blanco">
                     </div>
                     <div>
-                        <h4>NECKLACE</h4>
+                        <h4>cadenita Diana</h4>
                         <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <p2>$29.500</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
                 <div class="item4-prod">
                     <div>
-                        <img src="./assets/accesorios4.jpg" alt="">
+                        <img src="./assets/accesorios4.jpg" alt="aros Square, muy bellos, bañados en oro de 18 kilates">
                     </div>
                     <div>
-                        <h4>RING</h4>
-                        <p>-$32.000-</p>
-                        <p2>$28.000</p>
+                        <h4>aros Square</h4>
+                        <p>-$22.000-</p>
+                        <p2>$18.000</p>
                         <a href="">comprar</a>
                     </div>
                 </div>
@@ -260,17 +260,17 @@
             <h3>NUESTROS PRODUCTOS RECOMENDADOS</h3>
             <p>¿Cuál es tu favorito?</p>
             <div class="recomendados-grid">
-                    <img class="r1" src="./assets/black.png" alt="">
+                    <img class="r1" src="./assets/prod-recom-index1.jpg" alt="">
                     <a class="r2" href="">comprar</a>
-                    <img class="r3" src="./assets/black.png" alt="">
+                    <img class="r3" src="./assets/prod-recom-index2.jpg" alt="">
                     <a class="r4" href="">comprar</a>
-                    <img class="r5" src="./assets/black.png" alt="">
+                    <img class="r5" src="./assets/prod-recom-index3.jpg" alt="">
                     <a class="r6" href="">comprar</a>
-                    <img class="r7" src="./assets/black.png" alt="">
+                    <img class="r7" src="./assets/prod-recom-index4.jpg" alt="">
                     <a class="r8" href="">comprar</a>
-                    <img class="r9" src="./assets/black.png" alt="">
+                    <img class="r9" src="./assets/prod-recom-index5.jpg" alt="">
                     <a class="r10" href="">comprar</a>
-                    <img class="r11" src="./assets/black.png" alt="">
+                    <img class="r11" src="./assets/prod-recom-index6.jpg" alt="">
                     <a class="r12" href="">comprar</a>
             </div>
         </section>
@@ -278,10 +278,10 @@
 
     <footer class="footer-flex">
         <div class="item1-ubi-mail">
-            <img src="./assets/ubi.png" alt="">
-            <p>37900 Candace Club</p>
-            <img src="./assets/email.png" alt="">
-            <p>Doreen31@gmail.com</p>
+            <img src="./assets/ubi.png" alt="item ubicacion - esquina Chacabuco y Olmos - Córdoba, Argentina">
+            <p>Chacabuco y Olmos - Córdoba, Argentina</p>
+            <img src="./assets/email.png" alt="correo electronico de contacto - paoloyclelia@gmail.com">
+            <p>paoloyclelia@gmail.com</p>
         </div>
         <div class="item2">
             <div class="sobre-preg">
@@ -294,9 +294,9 @@
             </div>
         </div>
         <div class="item3-redes-sociales">
-            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="./assets/IG.png" alt=""></a>
-            <a href="" target="_blank"><img src="./assets/FB.png" alt=""></a>
-            <a href="" target="_blank"><img src="./assets/WPP.png" alt=""></a>
+            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="./assets/IG.png" alt="item Instagram site - usuario: serene_bagss"></a>
+            <a href="https://www.facebook.com/profile.php?id=61555638912745&mibextid=LQQJ4d" target="_blank"><img src="./assets/FB.png" alt="item Facebook - usuario: Serene Bags"></a>
+            <a href="https://wa.me/message/2P4EKK3AUTOHF1" target="_blank"><img src="./assets/WPP.png" alt="item WhatsApp - contacto: +54 3754451241"></a>
         </div>
     </footer>
     <aside></aside>
