--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -46,34 +46,44 @@
             <h4 class="h4-titulo">PREGUNTAS FRECUENTES</h4>
             <div class="grid-preg-frec">
                 <div class="item1">
-                    <a class="preguntas" href=""><img src="../assets/PF-monitor.png" alt="">GUÍA DE COMPRA</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-monitor.png" alt="item guia de compra">GUÍA DE COMPRA</a>
                 </div>
                 <div class="item2">
-                    <a class="preguntas" href=""><img src="../assets/PF-carrito.png" alt="">PRECIOS Y PROMOCIONES</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-carrito.png" alt="item precios y promociones">PRECIOS Y PROMOCIONES</a>
                 </div>
                 <div class="item3">
-                    <a class="preguntas" href=""><img src="../assets/PF-mediopago.png" alt="">MEDIOS DE PAGO</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-mediopago.png" alt="item medios de pago">MEDIOS DE PAGO</a>
                 </div>
                 <div class="item4">
-                    <a class="preguntas" href=""><img src="../assets/PF-envio.png" alt="">ENVÍOS Y ENTREGAS</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-envio.png" alt="item envios y entregas">ENVÍOS Y ENTREGAS</a>
                 </div>
                 <div class="item5">
-                    <a class="preguntas" href=""><img src="../assets/PF-devolucion.png" alt="">CAMBIOS Y DEVOLUCIONES</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-devolucion.png" alt="item cambios y devoluciones">CAMBIOS Y DEVOLUCIONES</a>
                 </div>
                 <div class="item6">
-                    <a class="preguntas" href=""><img src="../assets/PF-gift-card.png" alt="">GIFT CARD</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-gift-card.png" alt="item gift card">GIFT CARD</a>
                 </div>
                 <div class="item7">
-                    <a class="preguntas" href=""><img src="../assets/PF-preorder.png" alt="">PRE-ORDER</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-preorder.png" alt="item pre-order">PRE-ORDER</a>
                 </div>
                 <div class="item8">
-                    <a class="preguntas" href=""><img src="../assets/PF-contanto.png" alt="">CONTACTO</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-contanto.png" alt="item contacto">CONTACTO</a>
                 </div>
             </div>
             <div>
                 <ul class="flex-preg-frec">
                     <li>● GUÍA DE COMPRAS</li>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione iste nulla eius voluptatum delectus quibusdam incidunt, facilis quos quas doloremque atque nisi fugiat, itaque dicta distinctio tempore, repellendus eum optio!</p>
+                        <p>Bienvenido a nuestra Guía de Compras en Serene, donde te ayudamos a encontrar las mejores opciones para tus necesidades en accesorios y carteras. En esta sección, te ofrecemos consejos útiles y recomendaciones expertas para hacer que tu experiencia de compra sea simple y satisfactoria. Desde entender los materiales hasta elegir el estilo perfecto, estamos aquí para guiarte en cada paso del proceso.
+                            <br><strong> ¿Qué encontrarás en nuestra Guía de Compras? </strong>
+                            <br>- Detalles Exquisitos: Analizamos cuidadosamente cada producto para proporcionarte información detallada sobre la calidad, los materiales y el diseño.
+                            <br>- Comparaciones Útiles: Comparamos diferentes estilos y características para ayudarte a tomar una decisión informada según tu estilo personal y necesidades específicas.
+                            <br>- Consejos de Estilo: Consejos prácticos sobre cómo elegir la cartera o accesorio ideal que complemente tu estilo y personalidad.
+                            <br>- Reseñas Confiables: Reseñas honestas y basadas en pruebas reales para que puedas tener una idea clara de lo que puedes esperar de cada artículo.
+                            <br>- Guías de Tendencias: Guías especializadas que te mantendrán al día con las últimas tendencias en moda y accesorios.
+                            <br>
+                            <br>En Serene nos comprometemos a ofrecerte una experiencia de compra excepcional. Valoramos la calidad, la elegancia y la satisfacción del cliente por encima de todo. Con nuestra Guía de Compras, queremos asegurarnos de que encuentres exactamente lo que estás buscando, ya sea que busques una cartera clásica, un bolso funcional o un accesorio que complemente tu estilo diario.
+                            <br>
+                            <br>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p>
                     <li>● PRECIOS Y PROMOCIONES</li>
                     <li>● MEDIOS DE PAGO</li>
                     <li>● ENVIOS Y ENTREGAS</li>
@@ -87,14 +97,12 @@
 
     </main>
 
-
-
     <footer class="footer-flex">
         <div class="item1-ubi-mail">
-            <img src="../assets/ubi.png" alt="">
-            <p>37900 Candace Club</p>
-            <img src="../assets/email.png" alt="">
-            <p>Doreen31@gmail.com</p>
+            <img src="../assets/ubi.png" alt="item ubicacion - esquina Chacabuco y Olmos - Córdoba, Argentina">
+            <p>Chacabuco y Olmos - Córdoba, Argentina</p>
+            <img src="../assets/email.png" alt="correo electronico de contacto - paoloyclelia@gmail.com">
+            <p>paoloyclelia@gmail.com</p>
         </div>
         <div class="item2">
             <div class="sobre-preg">
@@ -107,9 +115,9 @@
             </div>
         </div>
         <div class="item3-redes-sociales">
-            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt=""></a>
-            <a href="" target="_blank"><img src="../assets/FB.png" alt=""></a>
-            <a href="" target="_blank"><img src="../assets/WPP.png" alt=""></a>
+            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt="item Instagram site - usuario: serene_bagss"></a>
+            <a href="https://www.facebook.com/profile.php?id=61555638912745&mibextid=LQQJ4d" target="_blank"><img src="../assets/FB.png" alt="item Facebook - usuario: Serene Bags"></a>
+            <a href="https://wa.me/message/2P4EKK3AUTOHF1" target="_blank"><img src="../assets/WPP.png" alt="item WhatsApp - contacto: +54 3754451241"></a>
         </div>
     </footer>
 
