--- a/pages/últimoslanzamientos.html
+++ b/pages/últimoslanzamientos.html
@@ -47,10 +47,10 @@
     </main>
     <footer class="footer-flex">
         <div class="item1-ubi-mail">
-            <img src="../assets/ubi.png" alt="">
-            <p>37900 Candace Club</p>
-            <img src="../assets/email.png" alt="">
-            <p>Doreen31@gmail.com</p>
+            <img src="../assets/ubi.png" alt="item ubicacion - esquina Chacabuco y Olmos - Córdoba, Argentina">
+            <p>Chacabuco y Olmos - Córdoba, Argentina</p>
+            <img src="../assets/email.png" alt="correo electronico de contacto - paoloyclelia@gmail.com">
+            <p>paoloyclelia@gmail.com</p>
         </div>
         <div class="item2">
             <div class="sobre-preg">
@@ -63,9 +63,9 @@
             </div>
         </div>
         <div class="item3-redes-sociales">
-            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt=""></a>
-            <a href="" target="_blank"><img src="../assets/FB.png" alt=""></a>
-            <a href="" target="_blank"><img src="../assets/WPP.png" alt=""></a>
+            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt="item Instagram site - usuario: serene_bagss"></a>
+            <a href="https://www.facebook.com/profile.php?id=61555638912745&mibextid=LQQJ4d" target="_blank"><img src="../assets/FB.png" alt="item Facebook - usuario: Serene Bags"></a>
+            <a href="https://wa.me/message/2P4EKK3AUTOHF1" target="_blank"><img src="../assets/WPP.png" alt="item WhatsApp - contacto: +54 3754451241"></a>
         </div>
     </footer>
     <aside></aside>
