--- a/pages/billeteras.html
+++ b/pages/billeteras.html
@@ -19,12 +19,13 @@
                 <a href="../index.html"><img src="../assets/Serene_index.png" alt=""></a>
             </div>
             <div class="col-sd-12 col-md-5 col-lg-5 order-1">
-                <nav>
-                    <ul class="d-flex flex-row justify-content-around">
-                        <li><a href="bags.html">Bags</a>
-                        <li><a href="minibags.html">MiniBags</a></li>
-                        <li><a href="#">Billeteras</a></li>
-                        <li><a href="accesorios.html">Accesorios</a></li>
+                <nav class="dropdown">
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Categorías</a>
+                    <ul class="dropdown-menu" class="d-flex flex-row justify-content-around">
+                        <li><a class="dropdown-item" href="bags.html">Bags</a>
+                        <li><a class="dropdown-item" href="minibags.html">MiniBags</a></li>
+                        <li><a class="dropdown-item" href="#">Billeteras</a></li>
+                        <li><a class="dropdown-item" href="accesorios.html">Accesorios</a></li>
                     </ul>
                 </nav>
             </div>
@@ -139,10 +140,10 @@
     <footer class="container-fluid bg-warning">
         <div class="row">
             <div class="col">
-                <img src="../assets/ubi.png" alt="">
-                <p>37900 Candace Club</p>
-                <img src="../assets/email.png" alt="">
-                <p>Doreen31@gmail.com</p>
+                <img src="../assets/ubi.png" alt="item ubicacion - esquina Chacabuco y Olmos - Córdoba, Argentina">
+                <p>Chacabuco y Olmos - Córdoba, Argentina</p>
+                <img src="../assets/email.png" alt="correo electronico de contacto - paoloyclelia@gmail.com">
+                <p>paoloyclelia@gmail.com</p>
             </div>
             <div class="col">
                 <div>
@@ -155,9 +156,9 @@
                 </div>
             </div>
             <div class="col">
-                <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt=""></a>
-                <a href="" target="_blank"><img src="../assets/FB.png" alt=""></a>
-                <a href="" target="_blank"><img src="../assets/WPP.png" alt=""></a>
+                <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt="item Instagram site - usuario: serene_bagss"></a>
+                <a href="https://www.facebook.com/profile.php?id=61555638912745&mibextid=LQQJ4d" target="_blank"><img src="../assets/FB.png" alt="item Facebook - usuario: Serene Bags"></a>
+                <a href="https://wa.me/message/2P4EKK3AUTOHF1" target="_blank"><img src="../assets/WPP.png" alt="item WhatsApp - contacto: +54 3754451241"></a>
             </div>
         </div>
     </footer>
