--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -47,7 +47,7 @@
             <div class="grid-carrito">
                 <div class="resumen1">
                     <div class="resumen1-img">
-                        <img src="../assets/elena.png" alt="">
+                        <img src="../assets/elena.png" alt="producto en carrito de compras, bag elena, 2 unidades $100.000">
                     </div>
                     <div class="resumen1-text">
                         <h6>Bag ELENA FullStack Developer</h6>
@@ -55,12 +55,12 @@
                         <p>$100.000</p>
                         <p>SKU: AS76987DS9FYS98</p>
                         <button>-   2   +</button>
-                        <a href=""><img src="../assets/basurero.png" alt=""></a>
+                        <a href=""><img src="../assets/basurero.png" alt="eliminar producto del carrito"></a>
                     </div>
                 </div>
                 <div class="resumen2">
                     <div class="resumen2-img">
-                        <img src="../assets/BTC.png" alt="">
+                        <img src="../assets/BTC.png" alt="producto en carrito de comra, billetera Susie, $35.000">
                     </div>
                     <div class="resumen2-text">
                         <h6>Wallet Susie FullStack Developer</h6>
@@ -68,7 +68,7 @@
                         <p>$35.000</p>
                         <p>SKU: AS76987DS9FYS98</p>
                         <button>-   1   +</button>
-                        <a href=""><img src="../assets/basurero.png" alt=""></a>    
+                        <a href=""><img src="../assets/basurero.png" alt="eliminar producto del carrito"></a>    
                     </div>
                 </div>
                 <div class="resumen3">
@@ -92,10 +92,10 @@
     </main>
     <footer class="footer-flex">
         <div class="item1-ubi-mail">
-            <img src="../assets/ubi.png" alt="">
-            <p>37900 Candace Club</p>
-            <img src="../assets/email.png" alt="">
-            <p>Doreen31@gmail.com</p>
+            <img src="../assets/ubi.png" alt="item ubicacion - esquina Chacabuco y Olmos - Córdoba, Argentina">
+            <p>Chacabuco y Olmos - Córdoba, Argentina</p>
+            <img src="../assets/email.png" alt="correo electronico de contacto - paoloyclelia@gmail.com">
+            <p>paoloyclelia@gmail.com</p>
         </div>
         <div class="item2">
             <div class="sobre-preg">
@@ -108,9 +108,9 @@
             </div>
         </div>
         <div class="item3-redes-sociales">
-            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt=""></a>
-            <a href="" target="_blank"><img src="../assets/FB.png" alt=""></a>
-            <a href="" target="_blank"><img src="../assets/WPP.png" alt=""></a>
+            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt="item Instagram site - usuario: serene_bagss"></a>
+            <a href="https://www.facebook.com/profile.php?id=61555638912745&mibextid=LQQJ4d" target="_blank"><img src="../assets/FB.png" alt="item Facebook - usuario: Serene Bags"></a>
+            <a href="https://wa.me/message/2P4EKK3AUTOHF1" target="_blank"><img src="../assets/WPP.png" alt="item WhatsApp - contacto: +54 3754451241"></a>
         </div>
     </footer>
     <aside></aside>
