copia hasta mie 10 jul

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Serene SA">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Serene">
-    <meta property="og:site_name" content="Serenee">
+    <meta property="og:site_name" content="Serene">
     <meta property="og:url" content="https://chesanigianpaolo.github.io/PreEntrega2-ChesaniGianPaolo/">
     <meta property="og:description" content="Carteras, bolsos, minibags y más">
     <meta property="og:type" content="website">
