--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,8 @@
     <title>Preguntas frecuentes - Serene</title>
     <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -70,30 +72,94 @@
                     <a class="preguntas" href=""><img src="../assets/PF-contanto.png" alt="item contacto">CONTACTO</a>
                 </div>
             </div>
+
+            <!-- prueba BS dropdown textos para los items de la pagina -->
             <div>
-                <ul class="flex-preg-frec">
-                    <li>● GUÍA DE COMPRAS</li>
-                        <p>Bienvenido a nuestra Guía de Compras en Serene, donde te ayudamos a encontrar las mejores opciones para tus necesidades en accesorios y carteras. En esta sección, te ofrecemos consejos útiles y recomendaciones expertas para hacer que tu experiencia de compra sea simple y satisfactoria. Desde entender los materiales hasta elegir el estilo perfecto, estamos aquí para guiarte en cada paso del proceso.
-                            <br><strong> ¿Qué encontrarás en nuestra Guía de Compras? </strong>
-                            <br>- Detalles Exquisitos: Analizamos cuidadosamente cada producto para proporcionarte información detallada sobre la calidad, los materiales y el diseño.
-                            <br>- Comparaciones Útiles: Comparamos diferentes estilos y características para ayudarte a tomar una decisión informada según tu estilo personal y necesidades específicas.
-                            <br>- Consejos de Estilo: Consejos prácticos sobre cómo elegir la cartera o accesorio ideal que complemente tu estilo y personalidad.
-                            <br>- Reseñas Confiables: Reseñas honestas y basadas en pruebas reales para que puedas tener una idea clara de lo que puedes esperar de cada artículo.
-                            <br>- Guías de Tendencias: Guías especializadas que te mantendrán al día con las últimas tendencias en moda y accesorios.
-                            <br>
-                            <br>En Serene nos comprometemos a ofrecerte una experiencia de compra excepcional. Valoramos la calidad, la elegancia y la satisfacción del cliente por encima de todo. Con nuestra Guía de Compras, queremos asegurarnos de que encuentres exactamente lo que estás buscando, ya sea que busques una cartera clásica, un bolso funcional o un accesorio que complemente tu estilo diario.
-                            <br>
-                            <br>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p>
-                    <li>● PRECIOS Y PROMOCIONES</li>
-                    <li>● MEDIOS DE PAGO</li>
-                    <li>● ENVIOS Y ENTREGAS</li>
-                    <li>● CAMBIOS Y DEVOLUCIONES</li>
-                    <li>● GIFT CARDS</li>
-                    <li>● PRE-ORDER</li>
-                    <li>● CONTACTO</li>
-                </ul>
+                <div class="contenedorcontenedorespregfrec"class="container mt-5">
+                    <div class="dropdown">
+                        <button class="contenedoresitemspregfrec" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ● GUÍA DE COMPRAS
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><p>Bienvenido a nuestra Guía de Compras en Serene, donde te ayudamos a encontrar las mejores opciones para tus necesidades en accesorios y carteras. En esta sección, te ofrecemos consejos útiles y recomendaciones expertas para hacer que tu experiencia de compra sea simple y satisfactoria. Desde entender los materiales hasta elegir el estilo perfecto, estamos aquí para guiarte en cada paso del proceso.
+                                <br><strong> ¿Qué encontrarás en nuestra Guía de Compras? </strong>
+                                <br>- Detalles Exquisitos: Analizamos cuidadosamente cada producto para proporcionarte información detallada sobre la calidad, los materiales y el diseño.
+                                <br>- Comparaciones Útiles: Comparamos diferentes estilos y características para ayudarte a tomar una decisión informada según tu estilo personal y necesidades específicas.
+                                <br>- Consejos de Estilo: Consejos prácticos sobre cómo elegir la cartera o accesorio ideal que complemente tu estilo y personalidad.
+                                <br>- Reseñas Confiables: Reseñas honestas y basadas en pruebas reales para que puedas tener una idea clara de lo que puedes esperar de cada artículo.
+                                <br>- Guías de Tendencias: Guías especializadas que te mantendrán al día con las últimas tendencias en moda y accesorios.
+                                <br>
+                                <br>En Serene nos comprometemos a ofrecerte una experiencia de compra excepcional. Valoramos la calidad, la elegancia y la satisfacción del cliente por encima de todo. Con nuestra Guía de Compras, queremos asegurarnos de que encuentres exactamente lo que estás buscando, ya sea que busques una cartera clásica, un bolso funcional o un accesorio que complemente tu estilo diario.
+                                <br>
+                                <br>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="contenedoresitemspregfrec" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ● PRECIOS Y PROMOCIONES
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="contenedoresitemspregfrec" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ● MEDIOS DE PAGO
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="contenedoresitemspregfrec" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ● ENVIOS Y ENTREGAS
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="contenedoresitemspregfrec" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ● CAMBIOS Y DEVOLUCIONES
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="contenedoresitemspregfrec" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ● GIFT CARDS
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="contenedoresitemspregfrec" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ● PRE-ORDER
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="contenedoresitemspregfrec" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ● CONTACTO
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
 
     </main>
 
@@ -121,6 +187,13 @@
         </div>
     </footer>
 
-    <aside></aside>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
 </body>
 </html>
